2004-09-10  MenTaLguY <mental@rydia.net>

	* src/render/polygon.h, src/render/shape-builder.h,
	  src/render/shape-builder.cpp, src/render/stroke.h,
	  src/render/dash.h:

	  beginnings of a simple alternate renderer

2004-09-09  Carl Hetherington <inkscape@carlh.net>

	* src/sp-flowtext.cpp, src/sp-offset.cpp, src/splivarot.cpp,
	src/display/nr-arena-shape.cpp, src/libnrtype/FlowDest.cpp,
	src/livarot/PathConversion.cpp, src/livarot/Shape.h: make
	Shape::nbPt and Shape::nbAr private and provide accessor methods.

	* src/display/nr-arena-shape.cpp, src/livarot/Shape.h: make
	Shape::flags private.

	* src/splivarot.cpp, src/livarot/PathStroke.cpp,
	src/livarot/Shape.cpp, src/livarot/Shape.h, src/livarot/ShapeMisc.cpp,
	src/livarot/ShapeRaster.cpp, src/livarot/ShapeSweep.cpp:
	Clean up handling of flags in Shape class

	* src/livarot/AlphaLigne.cpp, src/livarot/Path.cpp,
	src/livarot/PathSimplify.cpp, src/livarot/Shape.cpp,
	src/livarot/ShapeSweepUtils.cpp: it's ok to free NULL.

	* src/livarot/Shape.h, src/sp-offset.cpp, src/splivarot.cpp,
	src/display/nr-arena-shape.cpp: Make Shape::pts private and offer
	a read-only accessor.

	* src/livarot/Shape.cpp, src/livarot/Shape.h,
	src/livarot/ShapeDraw.cpp, src/livarot/ShapeMisc.cpp,
	src/livarot/ShapeRaster.cpp, src/livarot/ShapeSweep.cpp, src/
	livarot/ShapeSweepUtils.cpp, src/livarot/ShapeUtils.h: Rename
	Shape::pts to Shape::_pts, and use getPoint() wherever possible.

	* src/sp-offset.cpp, src/splivarot.cpp, src/livarot/Shape.cpp,
	src/livarot/Shape.h, src/livarot/ShapeMisc.cpp,
	src/livarot/ShapeRaster.cpp, src/livarot/ShapeSweep.cpp: Add
	dg_point::totalDegree() and make use of it.


2004-09-08  MenTaLguY  <mental@rydia.net>

	* src/libnr/nr-object.h, src/libnr/nr-object.cpp: fix NRObject
	  initialization

	* configure.in, src/gc-core.h, src/gc-managed.h, src/gc-anchored,
	  src/gc-finalized.h:

	  add a --disable-gc ./configure option to omit garbage collection